syntax = "proto3";

option csharp_namespace = "MiniProject2.Factory.Protos";

package grade;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service GradeProto {
    // rpc GetGradeByStudentId (google.protobuf.Int64Value) returns (GradeObj);
    rpc GetAllGrades (google.protobuf.Empty) returns (AllGradesReply);
    rpc GetGradeById (google.protobuf.Int64Value) returns (GradeObj);
    rpc AddGrade (GradeObj) returns (GradeObj);
}

message GradeObj {
  int64 id = 1;
  int64 studentId = 2;
  int64 examId = 3;

  enum Grades {
    zero = 0;
    two = 2;
    four = 4;
    seven = 7;
    ten = 10;
    twelve = 12;
    minusThree = 3;
  }
  Grades grade = 4;
}

message AllGradesReply {
    repeated GradeObj grades = 1;
}